# cmakedoc

./: README.md  aspell.conf  cmakedoc.cmake  cplusplus.txt  doaddtrim.sh  dospell.sh  spell_words.txt.in
test/: CMakeLists.txt  README.md  spell_dictionary.txt  test.cpp  test.hpp
